2012-03-14  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add matlab/ManifoldToolbox/smdscale.m (v0.1.0):

	- MDSCALE Multidimensional scaling on the surface of a sphere.

	* Add matlab/ManifoldToolbox/gdmatrix.m (v0.1.0):

	- GDMATRIX  Matrix of geodesic distances between points on a
	sphere, in degrees of arc.

	* Add directory for new toolbox, matlab/ManifoldToolbox, for
	functions that operate on Riemannian manifolds, instead of
	Euclidean space.

2012-03-08  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/PointsToolbox/bwmesh.m (v0.1.4):

	- Fix documentation again. The node index is not the linear index
	of the voxel in the image, but the index of the node in the list
	of nodes.

2012-03-05  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/PointsToolbox/bwmesh.m (v0.1.3):

	- Fix documentation. Vicente Grau noted that the help header was
	wrong (it corresponded to the old method, that used TriDelaunay
	instead of delaunay).

2012-02-28  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FileFormatToolbox/scinrrd_save.m (v0.3.2):

	- Fix bug. When writing to .mha file, function
	writemetaimagefile() expects all input arguments in the order x,
	y, z, so not only the image but also the size, spacing and offset
	vectors had to be permuted accordingly.

	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.5):

	- Fix bug. Size vector shouldn't have permuted the x and y
	components when reading from an .mha file. For consistency, it's
	better to just read the size, spacing and offset values as they
	are in the .mha file (x, y, z), and then permute the whole
	nrrd.axis so that we have rows->y and cols->x.

	* matlab/FileFormatToolbox/writemetaimagefile.m (v0.1.3):

	- Fix bug. The expected input should be having all input arguments
	(image data, spacing, offset, size) in the order x, y, z. And this
	is the order that they have to be written to the .mha file too.

	- Add "logical" (boolean) as input data type.

2012-02-26  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
